Renamed search app to question

--- a/django-project/templates/base.html
+++ b/django-project/templates/base.html
@@ -12,7 +12,7 @@
 <body>
     <header id="nav">
         <div class="container">
-            <a href="{% url 'search:index' %}" id="nav-logo">Stack Overflow</a>
+            <a href="{% url 'question:index' %}" id="nav-logo">Stack Overflow</a>
             <span id="search">
                 <input type="text" name="search" id="search-box" placeholder="Search amongst 8014 questions">
                 <span id="search-icon">
