Added simple WIP search result page

--- a/django-project/questions/templates/questions/index.html
+++ b/django-project/questions/templates/questions/index.html
@@ -3,5 +3,19 @@
 {% block title %}Search{% endblock title %}
 
 {% block content %}
-    <h1>Content of index</h1>
+    <div class="search-result-header">
+        <h1>Search Results</h1>
+        <p class="amount-of-results">500 results</p>
+    </div>
+    <div class="search-result-container">
+        <div class="search-result-item">
+            <h2>hello</h2>
+        </div>
+        <div class="search-result-item">
+            <h2>hello</h2>
+        </div>
+        <div class="search-result-item">
+            <h2>hello</h2>
+        </div>
+    </div>
 {% endblock content %}
