--- a/django-project/static/main.css
+++ b/django-project/static/main.css
@@ -11,6 +11,11 @@ body {
     color: #333;
 }
 
+h1 {
+    font-weight: 380;
+    font-size: 1.8em;
+}
+
 .container {
     width: 55%;
     margin: 0 auto;
@@ -20,6 +25,7 @@ body {
     background-color: #FAFAFB;
     border-bottom: solid 3px #F48022;
     height: 45px;
+    box-shadow: 0 1px 0 rgba(11,14,13,0.1), 0 1px 6px rgba(55,68,62,0.1);
 }
 
 #nav > .container {
@@ -27,7 +33,7 @@ body {
 }
 
 #nav-logo {
-    font-size: 28px;
+    font-size: 2em;
     font-weight: 320;
     margin: 6px 6px;
     text-decoration: none;
@@ -37,7 +43,7 @@ body {
 #search {
     display: flex;
     flex: 1;
-    margin: 9px;
+    margin: 9px 6px;
 }
 
 #search-icon {
@@ -52,7 +58,31 @@ body {
     width: 100%;
     padding: 2px 8px;
     outline: 0;
-    border: 1px solid #ccc;
+    border: 1px solid #CCC;
+}
+
+.search-result-header {
+    margin-top: 15px;
+    padding: 0 6px;
+}
+
+.amount-of-results {
+    margin-top: 10px;
+}
+
+.search-result-container {
+    background: white;
+    border-top: #D6D9DB solid 1px;
+    padding: 10px;
+    margin-top: 8px;
+}
+
+.search-result-item:not(:last-child) {
+    border-bottom: #EFF0F0 solid 1px;
+}
+
+.search-result-item {
+    padding: 10px;
 }
 
 @media screen and (max-width: 1500px) {
