--- a/nodejs-project/views/layout.pug
+++ b/nodejs-project/views/layout.pug
@@ -6,6 +6,6 @@ html(lang="en")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     title Document
     link(rel='stylesheet', href='/stylesheets/fonts.css')
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/main.css')
   body
     block content
