--- a/django-project/static/main.css
+++ b/django-project/static/main.css
@@ -9,6 +9,7 @@ body {
     font-size: 14px;
     font-family: "Roboto", "Lucida Grande", "DejaVu Sans", "Bitstream Vera Sans", Verdana, sans-serif;
     color: #333;
+    padding-top: 48px;
 }
 
 h1 {
@@ -124,7 +125,7 @@ a:hover {
     display: flex;
     flex-direction: column;
     margin-right: 15px;
-    height: 115px;
+    height: 90px;
 }
 
 .stats-box {
@@ -133,12 +134,12 @@ a:hover {
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    padding: 0 10px;
+    padding: 0 6px;
     color: white;
 }
 
 .stats-box > b {
-    font-size: 1.3em;
+    font-size: 1em;
 }
 
 .stats-box > div {
@@ -157,6 +158,11 @@ a:hover {
 
 .search-result-content {
     flex: 1;
+}
+
+.date {
+    text-align: right;
+    font-size: 1.1em;
 }
 
 @media screen and (max-width: 1500px) {
