Index view using "questions" models
The index view for the questions app is now using the Post model to get the most recent questions. The template file has been updated to use the new variables. The text body will always be inline.

--- a/django-project/questions/templates/questions/index.html
+++ b/django-project/questions/templates/questions/index.html
@@ -4,8 +4,7 @@
 
 {% block content %}
     <div class="search-result-header">
-        <h1>Search Results</h1>
-        <p class="amount-of-results">{{ questions|length }} result(s)</p>
+        <h1>Most recent questions</h1>
     </div>
     <div class="search-result-container">
         {% for question in questions %}
