--- a/django-project/static/main.css
+++ b/django-project/static/main.css
@@ -14,22 +14,23 @@ body {
 
 h1 {
     font-weight: 380;
-    font-size: 1.9em;
+    font-size: 1.7em;
 }
 
 h2 {
     font-weight: 340;
-    font-size: 1.75em;
+    font-size: 1.55em;
 }
 
 h3 {
     font-weight: 300;
-    font-size: 1.6em;
+    font-size: 1.4em;
 }
 
 p {
+    display: inline;
     font-weight: 250;
-    font-size: 1.2em;
+    font-size: 1em;
 }
 
 a {
@@ -43,6 +44,10 @@ a:visited {
 
 a:hover {
     color: #258bd4;
+}
+
+ul, ol {
+    list-style-position: inside;
 }
 
 .container {
@@ -163,6 +168,26 @@ a:hover {
 .date {
     text-align: right;
     font-size: 1.1em;
+}
+
+.search-result-container li {
+    display: inline;
+    font-weight: 250;
+}
+
+.search-result-container pre {
+    display: inline;
+}
+
+.search-result-container code {
+    white-space: normal;
+    font-style: normal;
+    font-family: "Roboto";
+    font-weight: 250;
+}
+
+.search-result-container strong {
+    font-weight: 250;
 }
 
 @media screen and (max-width: 1500px) {
