--- a/django-project/questions/templates/questions/search-item.html
+++ b/django-project/questions/templates/questions/search-item.html
@@ -1,17 +1,17 @@
 <div class="search-result-item">
     <div class="search-result-stats">
         <div class="stats-box vote-stats">
-            <b>{{ question.votes }}</b>
+            <b>{{ question.score }}</b>
             <div>Votes</div>
         </div>
         <div class="stats-box answer-stats">
-            <b>{{ question.answers }}</b>
+            <b>{{ question.answer_count }}</b>
             <div>Answers</div>
         </div>
     </div>
     <div class="search-result-content">
         <h3><a href="/">Q: {{ question.title }}</a></h3>
-        <p>{{ question.body }}</p>
-        <div class="date">Asked {{ question.date }}</div>
+        {{ question.body | truncatewords_html:50 | safe }}
+        <div class="date">Asked {{ question.creation_date }}</div>
     </div>
 </div>
