Added search view
This is the search view that will be used for full text search. Currently it just uses the "contains" function to find posts that contain the search words. The search bar is still not usable, this is just the function it will use. One may manually do the search by going to a url of the following format "/search/<search-word>".

--- a/django-project/questions/templates/questions/search.html
+++ b/django-project/questions/templates/questions/search.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
 
-{% block title %}Most recent questions{% endblock title %}
+{% block title %}Questions containing '{{ search }}'{% endblock title %}
 
 {% block content %}
     <div class="search-result-header">
-        <h1>Most recent questions</h1>
+        <h1>Search results for '{{ search }}'</h1>
+        <p class="amount-of-results">{{ questions | length }} result(s)</p>
     </div>
     <div class="search-result-container">
         {% for question in questions %}
