--- a/django-project/questions/templates/questions/question.html
+++ b/django-project/questions/templates/questions/question.html
@@ -1,8 +1,14 @@
 {% extends 'base.html' %}
 
-{% block title %}Questions containing '{{ search }}'{% endblock title %}
+{% block title %}Question{% endblock title %}
 
 {% block content %}
     <div class="question-container">
+        {% for post in posts %}
+            <div style="margin-top: 30px;">{{ post.body | safe }}</div>
+            {% for comment in comments %}
+                <div style="margin-top: 10px;">{{ comment.text | safe }}</div>
+            {% endfor %}
+        {% endfor %}
     </div>
 {% endblock content %}
