Renamed search-item template to post-preview
Every post-preview title now uses the correct url for each post instead of going to "/".

--- a/django-project/questions/templates/questions/search.html
+++ b/django-project/questions/templates/questions/search.html
@@ -9,7 +9,7 @@
     </div>
     <div class="search-result-container">
         {% for question in questions %}
-            {% include 'questions/search-item.html' with question=question %}
+            {% include 'questions/post-preview.html' with question=question %}
         {% endfor %}
     </div>
 {% endblock content %}
