--- a/django-project/questions/templates/questions/post-preview.html
+++ b/django-project/questions/templates/questions/post-preview.html
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div class="search-result-content">
-        <h3><a href="/">Q: {{ question.title }}</a></h3>
+        <h3><a href="{% url 'questions:question' question.id %}">Q: {{ question.title }}</a></h3>
         {{ question.body | truncatewords_html:50 | safe }}
         <div class="date">Asked {{ question.creation_date }}</div>
     </div>
