--- a/django-project/static/main.css
+++ b/django-project/static/main.css
@@ -51,7 +51,7 @@ ul, ol {
 }
 
 .container {
-    width: 55%;
+    width: 45%;
     margin: 0 auto;
 }
 
@@ -210,8 +210,15 @@ ul, ol {
 }
 
 .post-votes-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 50px;
-    background-color: red;
+    padding-right: 15px;
+}
+
+.votes-icon-down {
+    transform: rotate(180deg);
 }
 
 .post-comment-container {
@@ -220,19 +227,19 @@ ul, ol {
 
 @media screen and (max-width: 1500px) {
     .container {
-        width: 65%;
+        width: 55%;
     }
 }
 
 @media screen and (max-width: 1300px) {
     .container {
-        width: 75%;
+        width: 65%;
     }
 }
 
 @media screen and (max-width: 1100px) {
     .container {
-        width: 85%;
+        width: 75%;
     }
 }
 
