--- a/django-project/static/main.css
+++ b/django-project/static/main.css
@@ -168,6 +168,7 @@ ul, ol {
 .date {
     text-align: right;
     font-size: 1.1em;
+    margin-top: 10px;
 }
 
 .search-result-container li {
@@ -204,9 +205,20 @@ ul, ol {
     display: none;
 }
 
+
+.question-header {
+    margin-top: 15px;
+    padding: 0 6px;
+}
+
 .post-container {
     display: flex;
     margin-top: 10px;
+    border-top: #D6D9DB solid 1px;
+}
+
+.post-container:last-child {
+    border-bottom: #D6D9DB solid 1px;
 }
 
 .post-votes-container {
@@ -217,12 +229,69 @@ ul, ol {
     padding-right: 15px;
 }
 
+.votes-icon {
+    cursor: pointer;
+}
+
 .votes-icon-down {
     transform: rotate(180deg);
 }
 
 .post-comment-container {
     flex: 1;
+}
+
+.post-comment {
+    margin-top: 10px;
+    border-top: #EFF0F0 solid 1px;
+    padding: 10px 10px 0px 10px;
+    font-size: 0.91em;
+}
+
+.post-comment:last-child {
+    padding-bottom: 10px;
+}
+
+.post-text {
+    padding: 10px 0 0 0;
+}
+
+.post-text  pre, .post-text code {
+    background-color: #EFF0F0;
+    margin: 10px 0;
+}
+
+.post-text pre {
+    padding: 10px;
+}
+
+.post-text p {
+    margin: 5px 0;
+    line-height: 1.3;
+    font-weight: 400;
+}
+
+.post-text ul, .post-text ol {
+    margin: 7px 0;
+    line-height: 1.3;
+    font-weight: 400;
+}
+
+.post-dates {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 15px;
+}
+
+.post-dates span {
+    padding: 3px 4px;
+    color: #39739f;
+    background-color: #E1ECF3;
+    margin: 0 4px;
+}
+
+.post-answers {
+    margin-bottom: 10px;
 }
 
 @media screen and (max-width: 1500px) {
