Performance improvements for index and search view
The parent_id of the Post model is now a FK to the PK so that it can be
properly used in Djangos ORM. The reason for it not being a FK already
is because of the dataset. The post-preview template is now using a
field in the query instead of calling the post property function for
every result. A few HTML comments has also been converted to DTL
comments in question.html.

--- a/django-project/questions/templates/questions/question.html
+++ b/django-project/questions/templates/questions/question.html
@@ -5,7 +5,7 @@
 
 {% block content %}
     {% for post in posts %}
-        <!-- First iteration is always the question -->
+        {% comment %} First iteration is always the question {% endcomment %}
         {% if forloop.first %}
             <h1 class="question-header">{{ post.title }}</h1>
         {% endif %}
@@ -32,12 +32,12 @@
                         {% endif %}
                     {% endfor %}
                 </div>
-                <div class="post-answers">
-                    <!-- Print answer count in the first iteration -->
-                    {% if forloop.first %}
+                {% comment %} Print answer count in the first iteration {% endcomment %}
+                {% if forloop.first %}
+                    <div class="post-answers">
                         <h2>{{ post.answer_count }} Answers</h2>
-                    {% endif %}
-                </div>
+                    </div>
+                {% endif %}
             </div>
         </div>
     {% endfor %}
