--- a/django-project/questions/templates/questions/post-preview.html
+++ b/django-project/questions/templates/questions/post-preview.html
@@ -5,7 +5,7 @@
             <div>Votes</div>
         </div>
         <div class="stats-box answer-stats">
-            <b>{{ question.answer_count }}</b>
+            <b>{{ question.num_of_answers }}</b>
             <div>Answers</div>
         </div>
     </div>
