Coverted base django template file to pug

--- a/nodejs-project/views/index.pug
+++ b/nodejs-project/views/index.pug
@@ -1,5 +1,7 @@
-extends layout
+extends base
+
+block title
+    - var title = 'Most recent questions'
 
 block content
   h1= title
-  p Welcome to #{title}
