Additional django templates converted to pug
Index and post-preview has been converted to pug. Renamed "index" router
to "questions" and removed the other router.

--- a/nodejs-project/views/base.pug
+++ b/nodejs-project/views/base.pug
@@ -15,7 +15,7 @@ html(lang="en")
             span#search
                 input(type="text" name="search" id="search-box" placeholder="Search amongst 0 questions")
                 span#search-icon
-                    img(src="images/search.svg", alt="search icon")
+                    img(src="/images/search.svg", alt="search icon")
     main
         .container
             block content
