Added question route and template
Added the question route and template for the node.js project.
The post-preview template is now using an absolute link for the question
url.

--- a/nodejs-project/views/index.pug
+++ b/nodejs-project/views/index.pug
@@ -5,7 +5,7 @@ block title
 
 block content
     .search-result-header
-        h1= title
+        h1= 'Most recent questions'
     .search-result-container
         each question, i in questions
             include ./includes/post-preview.pug
