--- a/nodejs-project/views/includes/post-preview.pug
+++ b/nodejs-project/views/includes/post-preview.pug
@@ -8,6 +8,6 @@
             div Answers
     .search-result-content
         h3
-            a(href="question/" + question.id) Q: #{question.title}
+            a(href="/question/" + question.id) Q: #{question.title}
         != question.preview_body
         .date Asked #{question.creation_date}
