--- a/nodejs-project/public/stylesheets/main.css
+++ b/nodejs-project/public/stylesheets/main.css
@@ -1,349 +1,352 @@
 * {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-  background-color: #FFF;
-  overflow-y: scroll;
-  font-size: 14px;
-  font-family: "Roboto", "Lucida Grande", "DejaVu Sans", "Bitstream Vera Sans", Verdana, sans-serif;
-  color: #333;
-  padding-top: 48px;
+    background-color: #FFF;
+    overflow-y: scroll;
+    font-size: 14px;
+    font-family: "Roboto", "Lucida Grande", "DejaVu Sans", "Bitstream Vera Sans", Verdana, sans-serif;
+    color: #333;
+    padding-top: 48px;
 }
 
 h1 {
-  font-weight: 380;
-  font-size: 1.7em;
+    font-weight: 380;
+    font-size: 1.7em;
 }
 
 h2 {
-  font-weight: 340;
-  font-size: 1.55em;
+    font-weight: 340;
+    font-size: 1.55em;
 }
 
 h3 {
-  font-weight: 300;
-  font-size: 1.4em;
+    font-weight: 300;
+    font-size: 1.4em;
 }
 
 p {
-  display: inline;
-  font-weight: 250;
-  font-size: 1em;
+    display: inline;
+    font-weight: 250;
+    font-size: 1em;
 }
 
 a {
-  color: #07E;
-  text-decoration: none;
+    color: #07E;
+    text-decoration: none;
 }
 
 a:visited {
-  color: #005980;
+    color: #005980;
 }
 
 a:hover {
-  color: #258bd4;
+    color: #258bd4;
 }
 
 ul, ol {
-  list-style-position: inside;
+    list-style-position: inside;
 }
 
 .container {
-  width: 45%;
-  margin: 0 auto;
+    width: 45%;
+    margin: 0 auto;
 }
 
 #nav {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  background-color: #FAFAFA;
-  border-top: solid 3px #F48022;
-  height: 45px;
-  box-shadow: 0 1px 0 rgba(11,14,13,0.1), 0 1px 6px rgba(55,68,62,0.1);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    background-color: #FAFAFA;
+    border-top: solid 3px #F48022;
+    height: 45px;
+    box-shadow: 0 1px 0 rgba(11,14,13,0.1), 0 1px 6px rgba(55,68,62,0.1);
 }
 
 #nav > .container {
-  display: flex;
+    display: flex;
 }
 
 #nav-logo {
-  font-size: 2em;
-  font-weight: 320;
-  margin: 6px 6px;
-  text-decoration: none;
-  color: #333;
+    font-size: 2em;
+    font-weight: 320;
+    margin: 6px 6px;
+    text-decoration: none;
+    color: #333;
 }
 
 #search {
-  display: flex;
-  flex: 1;
-  margin: 8px 6px;
+    display: flex;
+    flex: 1;
+    margin: 8px 6px;
 }
 
 #search-icon {
-  display: flex;
-  padding: 0px 10px;
-  border-radius: 0 3px 3px 0;
-  fill: white;
-  cursor: pointer;
-  background-color: #F48022;
+    display: flex;
+    padding: 0px 10px;
+    border-radius: 0 3px 3px 0;
+    fill: white;
+    cursor: pointer;
+    background-color: #F48022;
 }
 
 #search-box {
-  width: 100%;
-  padding: 2px 8px;
-  outline: 0;
-  border: 1px solid #CCC;
-  border-radius: 3px 0 0 3px;
+    width: 100%;
+    padding: 2px 8px;
+    outline: 0;
+    border: 1px solid #CCC;
+    border-radius: 3px 0 0 3px;
 }
 
 .search-result-header {
-  margin-top: 15px;
-  padding: 0 6px;
+    margin-top: 15px;
+    padding: 0 6px;
 }
 
 .amount-of-results {
-  margin-top: 10px;
+    margin-top: 10px;
 }
 
 .search-result-container {
-  background: white;
-  border-top: #D6D9DB solid 1px;
-  padding: 10px;
-  margin-top: 8px;
+    background: white;
+    border-top: #D6D9DB solid 1px;
+    padding: 10px;
+    margin-top: 8px;
 }
 
 .search-result-item:not(:last-child) {
-  border-bottom: #EFF0F0 solid 1px;
+    border-bottom: #EFF0F0 solid 1px;
 }
 
 .search-result-item {
-  display: flex;
-  padding: 10px;
+    display: flex;
+    padding: 10px;
 }
 
 .search-result-stats {
-  display: flex;
-  flex-direction: column;
-  margin-right: 15px;
-  height: 90px;
-  border-radius: 2px;
+    display: flex;
+    flex-direction: column;
+    margin-right: 15px;
+    height: 90px;
+    border-radius: 2px;
 }
 
 .stats-box {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  padding: 0 6px;
-  color: rgb(84, 110, 131);
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    padding: 0 6px;
+    color: rgb(84, 110, 131);
 }
 
 .stats-box > b {
-  font-size: 1em;
+    font-size: 1em;
 }
 
 .stats-box > div {
-  font-size: 0.8em;
+    font-size: 0.8em;
 }
 
 .search-result-content {
-  flex: 1;
+    flex: 1;
 }
 
 .date {
-  text-align: right;
-  font-size: 1.1em;
-  margin-top: 10px;
+    text-align: right;
+    font-size: 1.1em;
+    margin-top: 10px;
 }
 
 .search-result-container li {
-  display: inline;
-  font-weight: 250;
+    display: inline;
+    font-weight: 250;
 }
 
 .search-result-container pre {
-  display: inline;
-  white-space: normal;
-  font-weight: 250;
-  font-family: "Roboto";
+    display: inline;
+    white-space: normal;
+    font-weight: 250;
+    font-family: "Roboto";
 }
 
 .search-result-container code {
-  white-space: normal;
-  font-family: "Roboto";
-  font-weight: 250;
+    white-space: normal;
+    font-family: "Roboto";
+    font-weight: 250;
 }
 
 .search-result-container strong {
-  font-weight: 250;
+    font-weight: 250;
 }
 
 .search-result-container img {
-  display: none;
+    display: none;
 }
 
 .search-result-container hr {
-  display: none;
+    display: none;
 }
 
 .search-result-container br {
-  display: none;
+    display: none;
 }
 
 .question-header {
-  margin-top: 15px;
-  padding: 0 6px;
+    margin-top: 15px;
+    padding: 0 6px;
 }
 
 .post-container {
-  display: flex;
-  margin-top: 10px;
-  border-top: #D6D9DB solid 1px;
+    display: flex;
+    margin-top: 10px;
+    border-top: #D6D9DB solid 1px;
 }
 
 .post-container:last-child {
-  border-bottom: #D6D9DB solid 1px;
-  padding-bottom: 10px;
+    border-bottom: #D6D9DB solid 1px;
+    padding-bottom: 10px;
 }
 
 .post-votes-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 50px;
-  padding-right: 15px;
-  font-size: 1.2em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50px;
+    padding-right: 15px;
+    font-size: 1.2em;
 }
 
 .votes-icon {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .votes-icon-down {
-  transform: rotate(180deg);
+    transform: rotate(180deg);
 }
 
 .post-comment-container {
-  flex: 1;
+    flex: 1;
+    min-width: 0;
 }
 
 .post-comment {
-  margin-top: 10px;
-  border-top: #EFF0F0 solid 1px;
-  padding: 10px 10px 0px 10px;
-  font-size: 0.91em;
+    margin-top: 10px;
+    border-top: #EFF0F0 solid 1px;
+    padding: 10px 10px 0px 10px;
+    font-size: 0.91em;
 }
 
 .post-comment-date {
-  color: #888;
+    color: #888;
 }
 
 .post-text {
-  padding: 10px 0 0 0;
+    padding: 10px 0 0 0;
 }
 
-.post-text  pre, .post-text code {
-  background-color: #EFF0F0;
-  margin: 10px 0;
+.post-text pre, .post-text code {
+    background-color: #EFF0F0;
+    margin: 10px 0;
 }
 
 .post-text pre {
-  padding: 10px;
+    padding: 10px;
+    overflow: auto;
 }
 
 .post-text p {
-  margin: 5px 0;
-  line-height: 1.3;
-  font-weight: 400;
+    margin: 5px 0;
+    line-height: 1.3;
+    font-weight: 400;
 }
 
 .post-text ul, .post-text ol {
-  margin: 7px 0;
-  line-height: 1.3;
-  font-weight: 400;
+    margin: 7px 0;
+    line-height: 1.3;
+    font-weight: 400;
 }
 
 .post-dates {
-  display: flex;
-  justify-content: flex-end;
-  margin-top: 15px;
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 15px;
 }
 
 .post-dates span {
-  padding: 3px 4px;
-  color: #39739f;
-  background-color: #E1ECF3;
-  margin: 0 4px;
-  font-size: 0.8em;
+    padding: 3px 4px;
+    color: #39739f;
+    background-color: #E1ECF3;
+    margin: 0 4px;
+    font-size: 0.8em;
 }
 
 .post-answers {
-  margin-top: 10px;
-  border-top: #EFF0F0 solid 1px;
-  padding-top: 10px;
+    margin-top: 10px;
+    border-top: #EFF0F0 solid 1px;
+    padding-top: 10px;
 }
 
 @media screen and (max-width: 1500px) {
-  .container {
-      width: 55%;
-  }
+    .container {
+        width: 55%;
+    }
 }
 
 @media screen and (max-width: 1300px) {
-  .container {
-      width: 65%;
-  }
+    .container {
+        width: 65%;
+    }
 }
 
 @media screen and (max-width: 1100px) {
-  .container {
-      width: 75%;
-  }
+    .container {
+        width: 75%;
+    }
 }
 
 @media screen and (max-width: 900px) {
-  .container {
-      width: 100%;
-  }
+    .container {
+        width: 100%;
+    }
 }
 
 @media screen and (max-width: 600px) {
-  .search-result-item {
-      flex-direction: column;
-  }
+    .search-result-item {
+        flex-direction: column;
+    }
 
-  .search-result-stats {
-      height: initial;
-      margin-right: initial;
-      flex-direction: row;
-  }
+    .search-result-stats {
+        height: initial;
+        margin-right: initial;
+        flex-direction: row;
+    }
 
-  .stats-box {
-      display: block;
-      flex: initial;
-      padding: 3px 15px;
-  }
+    .stats-box {
+        display: block;
+        flex: initial;
+        padding: 3px 15px;
+    }
 
-  .vote-stats {
-      border-radius: 0;
-  }
+    .vote-stats {
+        border-radius: 0;
+    }
 
-  .answer-stats {
-      border-radius: 0;
-  }
+    .answer-stats {
+        border-radius: 0;
+    }
 
-  .stats-box > b {
-      font-size: 0.85em;
-  }
+    .stats-box > b {
+        font-size: 0.85em;
+    }
 
-  .stats-box > div {
-      display: inline-block;
-      font-size: 0.85em;
-  }
+    .stats-box > div {
+        display: inline-block;
+        font-size: 0.85em;
+    }
 }
