--- a/django-project/templates/base.html
+++ b/django-project/templates/base.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}Default title!{% endblock title %}</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'fonts.css' %}">
-    <link rel="stylesheet" href="{% static 'main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/fonts.css' %}">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
 <body>
     <header id="nav">
@@ -26,5 +26,6 @@
             {% block content %}{% endblock content %}
         </div>
     </main>
+    <script src="{% static 'js/main.js' %}" type="text/javascript"></script>
 </body>
 </html>
