--- a/nodejs-project/views/base.pug
+++ b/nodejs-project/views/base.pug
@@ -7,16 +7,17 @@ html(lang="en")
         block title
             - var title = title ? title : 'Default title!'
             title= title
-        link(rel='stylesheet', href='/stylesheets/fonts.css')
-        link(rel='stylesheet', href='/stylesheets/main.css')
+        link(rel='stylesheet', href='/css/fonts.css')
+        link(rel='stylesheet', href='/css/main.css')
     body
-    header#nav
-        .container
-            a(href="/" id="nav-logo") Stack Overflow
-            span#search
-                input(type="text" name="search" id="search-box" placeholder="Search amongst " + amountOfPosts + " questions")
-                span#search-icon
-                    img(src="/images/search.svg", alt="search icon")
-    main
-        .container
-            block content
+        header#nav
+            .container
+                a(href="/" id="nav-logo") Stack Overflow
+                span#search
+                    input(type="text" name="search" id="search-box" placeholder="Search amongst " + amountOfPosts + " questions")
+                    span#search-icon
+                        img(src="/images/search.svg", alt="search icon")
+        main
+            .container
+                block content
+        script(src="/js/main.js" type="text/javascript")
