Added AJAX search in Django project
Implementent without any JS libraries. The template file no longer
extends the base template as only the "main container" will be replaced
on the site using JS.

--- a/django-project/templates/base.html
+++ b/django-project/templates/base.html
@@ -22,7 +22,7 @@
         </div>
     </header>
     <main>
-        <div class="container">
+        <div id="main-container" class="container">
             {% block content %}{% endblock content %}
         </div>
     </main>
