Added AJAX search in Node.js project
Implementent without any JS libraries. The template file no longer
extends the base template as only the "main container" will be replaced
on the site using JS.

--- a/nodejs-project/views/base.pug
+++ b/nodejs-project/views/base.pug
@@ -18,6 +18,6 @@ html(lang="en")
                     span#search-icon
                         img(src="/images/search.svg", alt="search icon")
         main
-            .container
+            .container#main-container
                 block content
         script(src="/js/main.js" type="text/javascript")
