Converted colors specified with rgb to hex

--- a/nodejs-project/views/base.pug
+++ b/nodejs-project/views/base.pug
@@ -14,7 +14,7 @@ html(lang="en")
             .container
                 a(href="/" id="nav-logo") Stack Overflow
                 span#search
-                    input(type="text" name="search" id="search-box" placeholder="Search amongst " + amountOfPosts + " questions")
+                    input(type="text" name="search" id="search-box" placeholder="Search amongst " + amountOfPosts + " posts")
                     span#search-icon
                         img(src="/images/search.svg", alt="search icon")
         main
