--- a/nodejs-project/public/css/main.css
+++ b/nodejs-project/public/css/main.css
@@ -43,7 +43,7 @@ a:visited {
 }
 
 a:hover {
-    color: #258bd4;
+    color: #258BD4;
 }
 
 ul, ol {
@@ -95,7 +95,7 @@ ul, ol {
 }
 
 #search-icon:hover {
-    background-color: rgb(230, 119, 28);
+    background-color: #E6771C;
 }
 
 #search-box {
@@ -116,7 +116,7 @@ ul, ol {
 }
 
 .search-result-container {
-    background: white;
+    background: #FFF;
     border-top: #D6D9DB solid 1px;
     padding: 10px;
     margin-top: 8px;
@@ -146,7 +146,7 @@ ul, ol {
     justify-content: center;
     text-align: center;
     padding: 0 6px;
-    color: rgb(84, 110, 131);
+    color: #546E83;
 }
 
 .stats-box > b {
@@ -284,7 +284,7 @@ ul, ol {
 
 .post-dates span {
     padding: 3px 4px;
-    color: #39739f;
+    color: #39739F;
     background-color: #E1ECF3;
     margin: 0 4px;
     font-size: 0.8em;
