Limit amount of search results

--- a/nodejs-project/views/search.pug
+++ b/nodejs-project/views/search.pug
@@ -1,6 +1,6 @@
 .search-result-header
     h1 Search results for '#{search}'
-    p.amount-of-results #{amount_of_results} results(s)
+    p.amount-of-results #{amount_of_results} result(s)
 .search-result-container
     each question in questions
         include ./includes/post-preview
