Strip HTML tags and limit by words on post preview
This commit also contains fixes to the date handling of the Node.js
application. The styling has been adjusted accordingly so that the post
preview body still has the same font.

--- a/django-project/static/css/main.css
+++ b/django-project/static/css/main.css
@@ -159,6 +159,9 @@ ul, ol {
 
 .search-result-content {
     flex: 1;
+    display: inline;
+    font-weight: 250;
+    font-size: 1em;
 }
 
 .date {
