Updated search function to allow usage of plus

--- a/django-project/questions/templates/questions/search.html
+++ b/django-project/questions/templates/questions/search.html
@@ -1,5 +1,5 @@
 <div class="search-result-header">
-    <h1>Search results for '{{ search }}'</h1>
+    <h1>Search results for '<span id="search-words">{{ search }}</span>'</h1>
     <p class="amount-of-results">{{ amount_of_results }} result(s)</p>
 </div>
 <div class="search-result-container">
