Updated artefacts and measurement script
The total amount of results has been added to the search view of both
artefacts. The measurement script will now also extract the search words
and the total amount of search results.

--- a/django-project/questions/templates/questions/search.html
+++ b/django-project/questions/templates/questions/search.html
@@ -1,6 +1,7 @@
 <div class="search-result-header">
     <h1>Search results for '<span id="search-words">{{ search }}</span>'</h1>
-    <p class="amount-of-results">{{ amount_of_results }} result(s)</p>
+    <p class="amount-of-results"><span id="total-amount-of-results">{{ total_amount_of_results }}</span> result(s)</p>
+    <div>Showing <span id="amount-of-results">{{ amount_of_results }}</span> result(s)</div>
 </div>
 <div class="search-result-container">
     {% for question in questions %}
